Upgrade Jetty to 10.0.11 (#181)
* disable sni host check per default
* add sni option documentation and add sni required option as well
* do not build with java 8
* default http compliance same as jetty9
* use jetty bom
* remove enforcer exclusions not needed anymore for bytecode check
* exclude jetty-annotations from the dependencies as it is not needed
* jdk17 profile not needed anymore

Signed-off-by: Olivier Lamy <olamy@apache.org>

Co-authored-by: James Nord <jtnord@users.noreply.github.com>
Co-authored-by: Tim Jacomb <timjacomb1+github@gmail.com>
Co-authored-by: Basil Crow <me@basilcrow.com>